@@ -3,6 +3,7 @@ Revision history for DBIx::Class
         - is_deferable support on relations used by the SQL::Translator
           parser (Anders Nor Berle)
         - Refactored DBIx::Class::Schema::Versioned
+        - Syntax errors from resultset components are now reported correctly
 
 0.08010 2008-03-01 10:30
         - Fix t/94versioning.t so it passes with latest SQL::Translator
